1998-11-04  Sam Maloney  <thufir@illogic.ml.org>

	* Fixed problem with 'dock' button, when AutoDock is turned on.
	* Implimented SMTP code, so Kscd no longer requires sendmail/unix
	  mail program(s) to submit CDDB records.
	* Added VERY requested feature, of having it retract the tray if
	  its ejected, when one hits the eject button.

1998-10-14 Alexei Dets   <dets@services.ru>

       * Fixed CD Database Editor close handling.

1998-10-13  Sam Maloney  <thufir@illogic.ml.org>

	* Fixed compilation problems some compilers will notice related to
 	last CDDB setup modifs
	
1998-10-09  Sam Maloney  <thufir@illogic.ml.org>

	* Added "play on tray close" feature
	* Many little fixes
	
1998-09-23  Sam Maloney  <thufir@illogic.ml.org>
	
	* Fixed submission of CDDB records, where it would not include a
	  'PLAYORDER=' at the bottom of the email.
	* Switched it over from using 'mail -s <subject> < record', to
	  using sendmail. (currently adding SMTP suppport, so it uses
	  no external program for this)

1998-09-21  Sam Maloney  <thufir@illogic.ml.org>
	
	* Added automatic storing of CDDB records downloaded from CDDB
	  server to local harddrive.
	* Fixed bug with routine connecting signals, over and over again,
	  causing routines to be called too many time, annoying CDDB
	  server admins. Happens when a new CDDB (remote) request was
	  issued.
	* Added snazyness of having the pulldown track selection box
	  display ("%02d: %s", tracknumber, trackname) for each item,
	  instead of just the number. 

Fri May 15 18:28:40 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* docking.cpp: fixed up the docking behaviour

	* Some Layout improvements. -- still not 100% satisfied with the
	  way the config dialogs look now.

1998-05-12  Vadim Zaliva  <lord@crocodile.org>

	* Options dialog made wider
	* In CDDB setup dialog added list of email serves. 
	* Getting SMTP servers from list of servers.

1998-04-29  Vadim Zaliva  <lord@crocodile.org>
